--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ img {
 	<body>
   <div class="photo"> 
     <!-- width="709" height="473" --> 
-    <img src="demopic.jpg"
+    <img src="demopic/010.jpg"
       class="reel"
       id="image2"
       data-images="demopic/###.jpg"
